--- a/exam-project/src/app/navbar/navbar.component.html
+++ b/exam-project/src/app/navbar/navbar.component.html
@@ -1,15 +1,15 @@
-<nav class="navbar">
-    <div>
-        <img src="assets/Capture.png" class="navbar-logo" alt="My App Logo" />
-    </div>
-    <ul class="navbar-links">
-        <li><a routerLink="home">Home</a></li>
-        <li><a routerLink="/about">About</a></li>
-        navbar-logo <li><a routerLink="/about">Services</a></li>
-        <li><a routerLink="/about">About</a></li>
-        <li><a routerLink="/contact">Blog</a></li>
-    </ul>
-    <div class="navbar-actions">
-        <!-- Add login/logout buttons or user-related actions here -->
-    </div>
-</nav>
+<div class="navbar-links">
+    <img src="assets/Capture.png" class="navbar-logo" alt="My App Logo" />
+    <a (click)="navicationTo('home')">Home</a>
+    <a (click)="navicationTo('register')">Register</a>
+    <a (click)="navicationTo('offers')">Offers</a>
+    <a (click)="navicationTo('login')">Login</a>
+    <a (click)="navicationTo('logout')">Logout</a>
+    <a (click)="navicationTo('create-offer')">Create Offer</a>
+
+
+
+</div>
+<div class="navbar-actions">
+    <!-- Add login/logout buttons or user-related actions here -->
+</div>
