--- a/exam-project/src/app/navbar/navbar.component.css
+++ b/exam-project/src/app/navbar/navbar.component.css
@@ -4,21 +4,33 @@
 }
 
 .navbar-links {
-    text-align: center;
-    margin: 0;
-    padding: 20px;
+
+    margin: 0 0 20px;
+    padding: 30px 30px 50px;
+
     background-color: aqua;
     float: flex;
+    display: block;
+}
+
+.navAncors {
+    margin-left: 30%;
+    margin-top: -30px;
+
+
 }
 
 .navbar-links a {
+    font-weight: 600;
 
-    padding: 20px;
-    font-size: 110%;
+    padding: 0px 30px 0px;
+    font-size: 130%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-:hover .navbar-links a {
+.navbar-links a:hover {
 
+
+    font-size: 140%;
     cursor: pointer;
 }
