--- a/exam-project/src/app/navbar/navbar.component.html
+++ b/exam-project/src/app/navbar/navbar.component.html
@@ -1,12 +1,13 @@
 <div class="navbar-links">
     <img src="assets/Capture.png" class="navbar-logo" alt="My App Logo" />
-    <a (click)="navicationTo('home')">Home</a>
-    <a (click)="navicationTo('register')">Register</a>
-    <a (click)="navicationTo('offers')">Offers</a>
-    <a (click)="navicationTo('login')">Login</a>
-    <a (click)="navicationTo('logout')">Logout</a>
-    <a (click)="navicationTo('create-offer')">Create Offer</a>
-
+    <div class="navAncors">
+        <a (click)="navicationTo('home')">Home</a>
+        <a (click)="navicationTo('register')">Register</a>
+        <a (click)="navicationTo('offers')">Offers</a>
+        <a (click)="navicationTo('login')">Login</a>
+        <a (click)="navicationTo('logout')">Logout</a>
+        <a (click)="navicationTo('create-offer')">Create Offer</a>
+    </div>
 
 
 </div>
