--- a/exam-project/src/app/navbar/navbar.component.html
+++ b/exam-project/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-links">
     <img src="assets/Capture.png" class="navbar-logo" alt="My App Logo" />
     <div class="navAncors">
-        <a (click)="navicationTo('home')">Home</a>
+        <a routerLink='home'>Home</a>
         <a (click)="navicationTo('register')">Register</a>
         <a (click)="navicationTo('offers')">Offers</a>
         <a (click)="navicationTo('login')">Login</a>
