--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
@@ -16,6 +16,7 @@
     margin-left: 45%;
     margin-right: auto;
     margin-bottom: -5px;
+    padding: 40px;
 
 
 
@@ -48,8 +49,8 @@
 .navbar-links a {
     font-weight: 600;
     padding: 20px;
-    margin-bottom: 50px;
-    font-size: 130%;
+
+    font-size: 180%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
 
@@ -59,6 +60,6 @@
 .navbar-links a:hover {
 
 
-    font-size: 140%;
+    font-size: 170%;
     cursor: pointer;
 }
