--- a/exam-project/src/app/views/error-page/error-page.component.html
+++ b/exam-project/src/app/views/error-page/error-page.component.html
@@ -1,1 +1,8 @@
-<p>error-page works!</p>
+<div class="mainbox">
+    <div class="err">4</div>
+
+    <div class="far">0</div>
+    <div class="err2">4</div>
+    <div class="msg">Ooops! Page Not Found<p>Let's go <a href="#">home</a> and try from there.</p>
+    </div>
+</div>
