--- a/exam-project/src/app/views/home/home.component.html
+++ b/exam-project/src/app/views/home/home.component.html
@@ -1,1 +1,40 @@
-<p>home works!</p>
+<!-- homepage -->
+<div class="container">
+    <div class="welcome">
+        <h1 class="header">Welcome to the Armwrestling challenge page!</h1>
+        <h3>Servises and options: </h3>
+        <ul>
+
+
+            <li> You can state your rules and name the price.
+            </li>
+            <li> Agree to and offer and compete in your chosen class.
+            </li>
+            <li> Request a licensed referee or one from the voluntary ones.
+            </li>
+            <li> Have regeonal rankings that get updated every day, based on the matches and rule set.
+            </li>
+            <li> Organize a tournament or a few super maches with our help.
+            </li>
+
+
+        </ul>
+        <h3>Register or login to post an offer and review the offers.</h3>
+        <div class="logged">
+            <ul>
+                <li>
+                    <a routerLink="/login">
+                        <i class="fas fa-sign-in-alt"></i>
+                        Login
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/register">
+                        <i class="fas fa-user-plus"></i>
+                        Register
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
