--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
@@ -1,28 +1,30 @@
-<div class="logo-div">
-    <img src="assets/Capture.png" class="navbar-logo" alt="My App Logo" />
-
-
-</div>
-<div class="navbar-links">
-
-    <div class="navAncors">
-
-        <a routerLink='home'>Home</a>
-        <a routerLink="offers">Offers</a>
-
-        <a routerLink="login">Login</a>
-        <a routerLink='logout'>Logout</a>
-        <a routerLink='create-offer'>Create Offer</a>
-
-        <a routerLink="register">Register</a>
-
-
+<div class="navConteiner">
+    <div class="logo-div">
+        <img src="assets/Capture.png" class="navbar-logo" alt="My App Logo" />
 
 
     </div>
+    <div class="navbar-links">
+
+        <div class="navAncors">
+
+            <a routerLink='home'>Home</a>
+            <a routerLink="offers">Offers</a>
+
+            <a routerLink="login">Login</a>
+            <a routerLink='logout'>Logout</a>
+            <a routerLink='create-offer'>Create Offer</a>
+
+            <a routerLink="register">Register</a>
 
 
-</div>
-<div class="navbar-actions">
-    <!-- Add login/logout buttons or user-related actions here -->
+
+
+        </div>
+
+
+    </div>
+    <div class="navbar-actions">
+        <!-- Add login/logout buttons or user-related actions here -->
+    </div>
 </div>
