--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
@@ -1,7 +1,8 @@
 .navConteiner {
-    position: absolute;
-    overflow: hidden;
+    /* position: absolute; */
+    /* overflow: none; */
     z-index: 10;
+    width: 100%;
 }
 
 
@@ -24,8 +25,7 @@
 }
 
 .logo-div {
-    background-color: rgb(19, 220, 227);
-
+    background-color: #32d6c8;
 }
 
 .navbar-links {
@@ -33,7 +33,7 @@
 
     padding: 0;
 
-    background-color: rgb(19, 220, 227);
+    background-color: #32d6c8;
     float: flex;
 
 
