--- a/exam-project/src/app/views/home/home.component.html
+++ b/exam-project/src/app/views/home/home.component.html
@@ -1,8 +1,16 @@
 <!-- homepage -->
 <div class="container">
     <div class="welcome">
-        <h1 class="header">Welcome to the Armwrestling challenge page!</h1>
-        <h3>Servises and options: </h3>
+        <h1>Welcome to the Armwrestling challenge page!</h1>
+        <div class="header-container">
+            <div class="header">
+                <iframe width="70%" height="600px" src="https://www.youtube.com/embed/WxSD846U4BI?si=9RY7skkCKTvAiN0J"
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+        <h3 class="servises">Servises and options: </h3>
         <ul>
 
 
@@ -23,14 +31,14 @@
         <div class="logged">
             <ul>
                 <li>
-                    <a routerLink="/login">
-                        <i class="fas fa-sign-in-alt"></i>
+                    <a class="buttons" routerLink="/login">
+
                         Login
                     </a>
                 </li>
                 <li>
-                    <a routerLink="/register">
-                        <i class="fas fa-user-plus"></i>
+                    <a class="buttons" routerLink="/register">
+
                         Register
                     </a>
                 </li>
