--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
@@ -12,7 +12,7 @@
             <a routerLink="offers">Offers</a>
 
             <a routerLink="login">Login</a>
-            <a routerLink='logout'>Logout</a>
+            <a routerLink='logout' (click)="logout()">Logout</a>
             <a routerLink='create-offer'>Create Offer</a>
 
             <a routerLink="register">Register</a>
