--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
@@ -53,7 +53,7 @@
     font-size: 180%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
-
+    text-align: center;
     flex-flow: column wrap;
 }
 
