--- a/exam-project/src/app/views/home/home.component.css
+++ b/exam-project/src/app/views/home/home.component.css
@@ -38,7 +38,7 @@
 
     padding: 0;
     margin-bottom: 3rem;
-    margin-left: 35%;
+    text-align: center;
 
 
     font-size: 2rem;
@@ -48,7 +48,8 @@
 
 .welcome ul {
     padding: 5%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.635);
+
     width: 40%;
     /* text-align: center; */
     text-justify: auto;
