--- a/exam-project/src/app/views/home/home.component.html
+++ b/exam-project/src/app/views/home/home.component.html
@@ -4,10 +4,10 @@
         <h1>Welcome to the Armwrestling challenge page!</h1>
         <div class="header-container">
             <div class="header">
-                <iframe width="70%" height="600px" src="https://www.youtube.com/embed/WxSD846U4BI?si=9RY7skkCKTvAiN0J"
+                <iframe width="1200" height="700" src="https://www.youtube.com/embed/Al0n1QiPDso?si=fR027cfV7FBIPJk5"
                     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-            encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
-                    allowfullscreen></iframe>
+                encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
         <h3 class="servises">Servises and options: </h3>
