--- a/exam-project/src/styles.css
+++ b/exam-project/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     margin: 0;
+
+    background-image: url('./armwrestling-home-gym-v2-v0-o235obpup1ba1.jpg');
+
+
+
 }
