--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
@@ -40,10 +40,16 @@
 }
 
 .navAncors {
-    margin-left: 30%;
+    margin-left: 34%;
     padding-bottom: 25px;
     display: inline-block;
 
+}
+
+.navAncors2 {
+    margin-left: 40%;
+    padding-bottom: 25px;
+    display: inline-block;
 }
 
 .navbar-links a {
