--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -7,19 +7,20 @@
 
             <p class="field field-icon">
                 <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-                <input #inputEmail class="input-error" type="email" name="email" id="email"
+                <input #inputEmail="ngModel" ngModel class="input-error" type="email" name="email" id="email"
                     placeholder="john.doe@gmail.com">
             </p>
+            <ng-container />
             <p class="error">
                 Email is required!
             </p>
             <!-- <p class="error">
                 Email is not valid!
             </p> -->
-
+            <ng-container />
             <p class="field field-icon">
                 <label for="password"><span><i class="fas fa-lock"></i></span></label>
-                <input #password type="password" name="password" id="password" placeholder="******">
+                <input #password="ngModel" ngModel type="password" name="password" id="password" placeholder="******">
             </p>
             <!-- <p class="error">
                 Password is required!
