--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -10,7 +10,7 @@
                 <input #inputEmail="ngModel" ngModel required class="input-error" type="email" name="email" id="email"
                     placeholder="john.doe@gmail.com">
             </p>
-            <ng-container>
+            <ng-container *ngIf="inputEmail.touched">
                 <p class="error" *ngIf="inputEmail.errors?.['required']">
                     Email is required!
                 </p>
