--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -1,31 +1,27 @@
-/* login register forms form.login,
-form.register {
+/* login register forms  */
+form.login {
     width: 40%;
     margin: 2em auto 0;
     text-align: center;
 }
 
-.login fieldset,
-.register fieldset {
+.login fieldset {
     border-radius: 0.3em;
     padding: 0.8em;
     background-color: #ffffff;
 }
 
-.login h2,
-.register h2 {
+.login h2 {
     padding-top: 0;
     border-bottom: none;
 }
 
-.login p,
-.register p {
+.login p {
     padding-bottom: 0;
     padding-top: 1.5rem;
 }
 
-.login input,
-.register input {
+.login input {
     flex: 0 1 100%;
     border: 1px solid;
     padding: 0.3em;
@@ -34,13 +30,11 @@ form.register {
     border-bottom-right-radius: 0.3em;
 }
 
-.login select,
-.register select {
+.login select {
     border-color: black;
 }
 
-.login button,
-.register button {
+.login button {
     color: white;
     border: none;
     border-radius: 0.3em;
@@ -50,8 +44,7 @@ form.register {
     outline: none;
 }
 
-.login i,
-.register i {
+.login i {
     border: 1px solid;
     border-right: none;
     padding: 0.55em;
@@ -60,22 +53,17 @@ form.register {
     background-color: #e9ecef;
 }
 
-.login a,
-.register a {
+.login a {
     color: #007bff;
 }
 
-.login a:hover,
-.register a:hover {
+.login a:hover {
     cursor: pointer;
 }
 
-.register .tel {
-    padding-right: 0.8em;
-}
 
-.login .field,
-.register .field {
+
+.login .field {
     display: flex;
     padding-bottom: 0;
 }
@@ -91,7 +79,7 @@ p.error {
 
 .input-error {
     border-left-color: red;
-} */
+}
 
 
 /*  .login {} */
