--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -5,22 +5,23 @@
         <fieldset>
             <h2>Login Form</h2>
 
-            <p class="field field-icon">
-                <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-                <input #inputEmail="ngModel" ngModel required class="input-error" type="email" name="email" id="email"
+            <p class="emailPassword">
+                <label for="email"><span><i class="emailLabel"></i></span></label>
+                <input #inputEmail="ngModel" ngModel required class="emailInput" type="email" name="email" id="email"
                     placeholder="john.doe@gmail.com">
             </p>
             <ng-container *ngIf="inputEmail.touched">
-                <p class="error" *ngIf="inputEmail.errors?.['required']">
+                <p class="errorRequired" *ngIf="inputEmail.errors?.['required']">
                     Email is required!
                 </p>
-                <!-- <p class="error">
+                <!-- <p class="errorInvalid">
                 Email is not valid!
             </p> -->
             </ng-container>
-            <p class="field field-icon">
-                <label for="password"><span><i class="fas fa-lock"></i></span></label>
-                <input #password="ngModel" ngModel type="password" name="password" id="password" placeholder="******">
+            <p class="emailPassword">
+                <label for="password"><span><i class="labelPassword"></i></span></label>
+                <input #password="ngModel" class="passwordInput" ngModel type="password" name="password" id="password"
+                    placeholder="******">
             </p>
             <!-- <p class="error">
                 Password is required!
