--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -21,7 +21,8 @@ form.login {
     padding-top: 1.5rem;
 }
 
-.login input {
+.emailPassword,
+.emailInput {
     flex: 0 1 100%;
     border: 1px solid;
     padding: 0.3em;
