--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -21,15 +21,15 @@ form.login {
     padding-top: 1.5rem;
 }
 
-/* 
+
 .emailPassword {
-  
+
     border: 1px solid;
     padding: 0.3em;
     border-left: 0.3em solid green;
     border-top-right-radius: 0.3em;
     border-bottom-right-radius: 0.3em;
-} */
+}
 
 .login select {
     border-color: black;
