--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -21,7 +21,7 @@
             <p class="emailPassword">
                 <label for="password"><span><i class="labelPassword"></i></span></label>
                 <input #password="ngModel" class="passwordInput" ngModel type="password" name="password" id="password"
-                    placeholder="******">
+                    placeholder="password">
             </p>
             <!-- <p class="error">
                 Password is required!
