--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -37,36 +37,17 @@ form.login {
     border-color: black;
 }
 
-.login button {
-    color: white;
-    border: none;
-    border-radius: 0.3em;
-    padding: 0.6em 1.2em;
-    margin-top: 1.5rem;
-    width: 60%;
-    outline: none;
-}
 
-.login i {
-    border: 1px solid;
-    border-right: none;
-    padding: 0.55em;
-    border-top-left-radius: 0.3em;
-    border-bottom-left-radius: 0.3em;
-    background-color: #e9ecef;
-}
 
 .login a {
     color: #007bff;
 }
 
-.login a:hover {
-    cursor: pointer;
-}
 
 
 
-.login .field {
+
+.field {
     display: flex;
     padding-bottom: 0;
 }
@@ -85,14 +66,42 @@ p.error {
 .input-error {
     border-left-color: red;
 }
+*/
+
+.login {
+    color: white;
+    cursor: pointer;
+    font-size: 30px;
+    border: none;
+    border-radius: 0.3em;
+    padding: 0.6em 1.2em;
+    margin-top: 1.5rem;
+    width: 90%;
+    outline: none;
+}
+
+.login,
+button {
+    background-color: #32d6c8;
+}
+
+.container {
+    margin: 300px;
+    color: black;
+}
+
+.emailPassword {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
 
 
-/*  .login {} */
 
-
-
-.passwordInput {
-
-    width: 500px;
-    height: 100px;
+.passwordInput,
+.emailInput {
+    width: 600px;
+    height: 50px;
+    border: #32d6c8 10px solid;
+    border-radius: 20%;
+    font-size: 30px;
 }
