--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -69,7 +69,7 @@ p.error {
 */
 
 .login {
-    color: white;
+    color: black;
     cursor: pointer;
     font-size: 30px;
     border: none;
@@ -78,15 +78,26 @@ p.error {
     margin-top: 1.5rem;
     width: 90%;
     outline: none;
+
 }
 
-.login,
-button {
+.login {
     background-color: #32d6c8;
 }
 
+.button {
+    color: white;
+
+}
+
+.button:hover {
+    background-color: #102f2c;
+}
+
 .container {
-    margin: 300px;
+    margin-top: 240px;
+    margin-bottom: 600px;
+
     color: black;
 }
 
