--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -30,7 +30,12 @@
                 Password must be at least 4 characters!
             </p> -->
 
-            <button class="login button">Login</button>
+            <button (mousedown)="loginButton()" *ngIf="loginButton()" class="login button">Login</button>
+
+
+
+            <button (click)="loginButton()" *ngIf="loginButton()" class="login ">Login</button>
+
 
             <p class="text-center">
                 Have an account?
