--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -30,11 +30,11 @@
                 Password must be at least 4 characters!
             </p> -->
 
-            <button (mousedown)="loginButton()" *ngIf="loginButton()" class="login button">Login</button>
+            <button class="login button">Login</button>
 
 
 
-            <button (click)="loginButton()" *ngIf="loginButton()" class="login ">Login</button>
+
 
 
             <p class="text-center">
