--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="navbar-links">
 
-        <div appNavbarComponent>
+        <div appNavbarComponent ngClass="classPick">
 
             <a routerLink='home'>Home</a>
             <a routerLink="offers">Offers</a>
