--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -8,7 +8,7 @@
             <p class="emailPassword">
 
                 <input #inputEmail="ngModel" ngModel required class="emailInput" type="email" name="email" id="email"
-                    placeholder="simeon.bogdanov@gmail.com">
+                    placeholder="simeon.bogdanov@gmail.com" [appValidators]="test">
             </p>
             <ng-container *ngIf="inputEmail.touched">
                 <p class="errorRequired" *ngIf="inputEmail.errors?.['required']">
