--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -28,7 +28,7 @@
 
 
 
-            <ng-container *ngIf="inputEmail.touched">
+            <ng-container *ngIf="password.touched">
                 <p class="error" *ngIf="">
                     Password is required!
                 </p>
