--- a/exam-project/src/app/views/register/register.component.css
+++ b/exam-project/src/app/views/register/register.component.css
@@ -1,32 +1,32 @@
 /*login register forms  */
 
-form.login,
+
 form.register {
     width: 40%;
     margin: 2em auto 0;
     text-align: center;
 }
 
-.login fieldset,
+
 .register fieldset {
     border-radius: 0.3em;
     padding: 0.8em;
     background-color: #ffffff;
 }
 
-.login h2,
+
 .register h2 {
     padding-top: 0;
     border-bottom: none;
 }
 
-.login p,
+
 .register p {
     padding-bottom: 0;
     padding-top: 1.5rem;
 }
 
-.login input,
+
 .register input {
     flex: 0 1 100%;
     border: 1px solid;
@@ -36,15 +36,15 @@ form.register {
     border-bottom-right-radius: 0.3em;
 }
 
-.login select,
+
 .register select {
     border-color: black;
 }
 
-.login button,
 .register button {
     color: white;
     border: none;
+    background-color: #32d6c8;
     border-radius: 0.3em;
     padding: 0.6em 1.2em;
     margin-top: 1.5rem;
@@ -52,7 +52,7 @@ form.register {
     outline: none;
 }
 
-.login i,
+
 .register i {
     border: 1px solid;
     border-right: none;
@@ -62,21 +62,19 @@ form.register {
     background-color: #e9ecef;
 }
 
-.login a,
+
 .register a {
     color: #007bff;
 }
 
-.login a:hover,
+
 .register a:hover {
     cursor: pointer;
 }
 
-.register .tel {
-    padding-right: 0.8em;
-}
 
-.login .field,
+
+
 .register .field {
     display: flex;
     padding-bottom: 0;
@@ -85,7 +83,7 @@ form.register {
 /* errors  */
 
 p.error {
-    text-align: left;
+    text-align: center;
     border-radius: 0.3em;
     color: red;
     padding-top: 0;
@@ -93,4 +91,9 @@ p.error {
 
 .input-error {
     border-left-color: red;
+}
+
+.button:hover {
+    background-color: #102f2c;
+    cursor: pointer;
 }
