--- a/exam-project/src/app/views/create-offer/create-offer.component.css
+++ b/exam-project/src/app/views/create-offer/create-offer.component.css
@@ -1,5 +1,3 @@
-/* new-theme
-
 .new-theme-border {
     border: 1px solid;
     border-radius: 1em;
@@ -13,15 +11,7 @@
     margin-bottom: 1em;
 }
 
-.header-background {
-    background-color: #4ebced;
-    border: 1px solid #4ebced;
-    padding: 1.5em;
-    padding-bottom: 0;
-    margin-bottom: 1em;
-    border-top-right-radius: 1em;
-    border-top-left-radius: 1em;
-}
+
 
 .header-background span {
     background-color: #fff;
@@ -30,14 +20,15 @@
     border-radius: 0.3em;
 }
 
-.title, .new-theme-content {
+.title,
+.new-theme-content {
     display: flex;
     flex-direction: column;
 }
 
 .new-theme-content {
     min-height: 100%;
-    width: 100%;
+    width: 40%;
     padding: 0;
     margin: 0;
 }
@@ -73,13 +64,25 @@ button+button {
     border-radius: 0.3em;
 }
 
+
+
+.input-error {
+    border-left-color: red;
+}
+
+.header-background {
+    background-color: #4ebced;
+    border: 1px solid #4ebced;
+    padding: 1.5em;
+    padding-bottom: 0;
+    margin-bottom: 1em;
+    border-top-right-radius: 1em;
+    border-top-left-radius: 1em;
+}
+
 p.error {
-    text-align: left;
+    text-align: center;
     border-radius: 0.3em;
     color: red;
     padding-top: 0;
 }
-
-.input-error {
-    border-left-color: red;
-} */
