--- a/exam-project/src/app/views/create-offer/create-offer.component.css
+++ b/exam-project/src/app/views/create-offer/create-offer.component.css
@@ -26,11 +26,12 @@
     flex-direction: column;
 }
 
-.new-theme-content {
+.offer-details {
     min-height: 100%;
     width: 40%;
     padding: 0;
     margin: 0;
+
 }
 
 .new-theme-content textarea {
@@ -85,4 +86,8 @@ p.error {
     border-radius: 0.3em;
     color: red;
     padding-top: 0;
+}
+
+.container {
+    width: 40%;
 }
